# unit-of-account-web

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  DEVELOPMENT.md  README.md
crates/backend/: .env.example  Cargo.toml
crates/backend/migrations/: 001_initial_schema.sql  20241031000001_initial_schema.sql
crates/backend/src/: main.rs
crates/backend/src/clients/: alpha_vantage.rs  coingecko.rs  mod.rs
crates/backend/src/db/: mod.rs
crates/backend/src/routes/: mod.rs
crates/backend/src/services/: metrics_service.rs  mod.rs  price_service.rs
crates/charting/: Cargo.toml
crates/charting/src/: lib.rs  line_chart.rs
crates/frontend/: Cargo.toml  Trunk.toml  index.html
crates/frontend/src/: lib.rs
crates/frontend/src/api/: mod.rs
crates/frontend/src/components/: asset_selector.rs  comparison_chart.rs  mod.rs
crates/frontend/src/pages/: home.rs  mod.rs
crates/frontend/static/: style.css
crates/shared/: Cargo.toml
crates/shared/src/: api_types.rs  lib.rs  models.rs
scripts/: verify_setup.sh
