[workspace]
resolver = "2"
members = [
    "crates/backend",
    "crates/frontend",
    "crates/shared",
    "crates/charting",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[workspace.dependencies]
# Shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.17"
anyhow = "1.0"

# Backend dependencies
axum = "0.8.6"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
    "migrate",
] }
reqwest = { version = "0.12.24", features = ["json"] }
tokio-cron-scheduler = "0.15.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Frontend dependencies
leptos = { version = "0.8.12" }
leptos_meta = { version = "0.8.5", default-features = false, features = [
    "ssr",
] }
leptos_router = { version = "0.8.9" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
] }
gloo-net = { version = "0.6.0", features = ["http"] }
plotters = "0.3"
plotters-canvas = "0.3"
console_error_panic_hook = "0.1"
