[package]
name = "backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
shared = { path = "../shared" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

# Backend specific
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
sqlx.workspace = true
reqwest.workspace = true
tokio-cron-scheduler.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Additional dependencies
dotenvy = "0.15"
