[package]
name = "frontend"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Workspace dependencies
shared = { path = "../shared", features = ["wasm"] }
charting = { path = "../charting" }

# Leptos framework
leptos = { workspace = true }
leptos_router = { workspace = true }
leptos_meta = { workspace = true }

# Wasm utilities
console_error_panic_hook = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }

# HTTP client
gloo-net = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
